[gd_scene load_steps=2 format=2]

[ext_resource path="res://display_bit/IndividualDsiplayBit.gd" type="Script" id=1]

[node name="IndividualDsiplayBit" type="Node2D"]
position = Vector2( 240, 152 )
rotation = 1.5708
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Top" type="ColorRect" parent="."]
margin_left = -88.0
margin_top = -32.0
margin_right = -72.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="ColorRect" parent="."]
margin_left = 72.0
margin_top = -32.0
margin_right = 88.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = 32.0
margin_right = 8.0
margin_bottom = 96.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -48.0
margin_right = 8.0
margin_bottom = 16.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotLeft" type="ColorRect" parent="."]
margin_left = 72.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 96.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotRight" type="ColorRect" parent="."]
margin_left = 72.0
margin_top = -48.0
margin_right = 88.0
margin_bottom = 16.0
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}
